04_workload/kyverno_policies/securityContext_ruleset.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-allowprivilegeescalation-false
  annotations:
    policies.kyverno.io/title: Add allowPrivilegeEscalation:false to every pod
    policies.kyverno.io/subject: Pod
    pod-policies.kyverno.io/autogen-controllers: none
spec:
  rules:
    - name: add-allowPrivilegeEscalation-false
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kyverno
                - linkerd
                - tigera-operator
                - calico-system
                - calico-apiserver
                - dex
                - falco
      mutate:
        patchStrategicMerge:
          spec:
            containers:
              - (name): "*"
                securityContext:
                  +(allowPrivilegeEscalation): false
            ephemeralContainers:
              - (name): "*"
                securityContext:
                  +(allowPrivilegeEscalation): false
            initContainers:
              - (name): "*"
                securityContext:
                  +(allowPrivilegeEscalation): false

---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-readonlyrootfilesystem-true
  annotations:
    policies.kyverno.io/title: Add readOnlyRootFilesystem:true to every pod
    policies.kyverno.io/subject: Pod
    pod-policies.kyverno.io/autogen-controllers: none
spec:
  rules:
    - name: add-readOnlyRootFilesystem-true
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kyverno
                - linkerd
                - tigera-operator
                - calico-system
                - calico-apiserver
                - dex
                - falco
      mutate:
        patchStrategicMerge:
          spec:
            containers:
              - (name): "*"
                securityContext:
                  +(readOnlyRootFilesystem): true
            ephemeralContainers:
              - (name): "*"
                securityContext:
                  +(readOnlyRootFilesystem): true
            initContainers:
              - (name): "*"
                securityContext:
                  +(readOnlyRootFilesystem): true
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-runasnonroot-true
  annotations:
    policies.kyverno.io/title: Add runAsNonRoot:true to every pod
    policies.kyverno.io/subject: Pod
    pod-policies.kyverno.io/autogen-controllers: none
spec:
  rules:
    - name: add-runAsNonRoot-true
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kyverno
                - linkerd
                - tigera-operator
                - calico-system
                - calico-apiserver
                - dex
                - falco
      mutate:
        patchStrategicMerge:
          spec:
            containers:
              - (name): "*"
                securityContext:
                  +(runAsNonRoot): true
                  +(runAsUser): 10001
            ephemeralContainers:
              - (name): "*"
                securityContext:
                  +(runAsNonRoot): true
                  +(runAsUser): 10001
            initContainers:
              - (name): "*"
                securityContext:
                  +(runAsNonRoot): true
                  +(runAsUser): 10001
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-dropcapabilities-all
  annotations:
    policies.kyverno.io/title: Add dropCapabilities:all to every pod
    policies.kyverno.io/subject: Pod
    pod-policies.kyverno.io/autogen-controllers: none
spec:
  rules:
    - name: add-dropCapabilities-all
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kyverno
                - linkerd
                - tigera-operator
                - calico-system
                - calico-apiserver
                - dex
                - falco
      mutate:
        patchStrategicMerge:
          spec:
            containers:
              - (name): "*"
                securityContext:
                  capabilities:
                    drop:
                      - ALL
            ephemeralContainers:
              - (name): "*"
                securityContext:
                  capabilities:
                    drop:
                      - ALL
            initContainers:
              - (name): "*"
                securityContext:
                  capabilities:
                    drop:
                      - ALL
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-seccomprofile-runtimedefault
  annotations:
    policies.kyverno.io/title: Add seccomProfile RuntimeDefault to every pod
    policies.kyverno.io/subject: Pod
    pod-policies.kyverno.io/autogen-controllers: none
spec:
  rules:
    - name: add-seccomProfile-RuntimeDefault
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kyverno
                - linkerd
                - tigera-operator
                - calico-system
                - calico-apiserver
                - dex
                - falco
      mutate:
        patchStrategicMerge:
          spec:
            containers:
              - (name): "*"
                securityContext:
                  +(seccompProfile):
                    type: RuntimeDefault
            ephemeralContainers:
              - (name): "*"
                securityContext:
                  +(seccompProfile):
                    type: RuntimeDefault
            initContainers:
              - (name): "*"
                securityContext:
                  +(seccompProfile):
                    type: RuntimeDefault
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-privileged-false
  annotations:
    policies.kyverno.io/title: Add privileged:false to every pod
    policies.kyverno.io/subject: Pod
    pod-policies.kyverno.io/autogen-controllers: none
spec:
  rules:
    - name: add-privileged-false
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kyverno
                - linkerd
                - tigera-operator
                - calico-system
                - calico-apiserver
                - dex
                - falco
      mutate:
        patchStrategicMerge:
          spec:
            containers:
              - (name): "*"
                securityContext:
                  +(privileged): false
            ephemeralContainers:
              - (name): "*"
                securityContext:
                  +(privileged): false
            initContainers:
              - (name): "*"
                securityContext:
                  +(privileged): false
